--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "firebase-functions": "^3.0.1",
         "next": "^8.1.0",
         "next-images": "^1.1.1",
-        "next-page-transitions": "^1.0.0-beta.2",
+        "next-page-transitions": "^1.0.0-canary.1",
         "next-redux-wrapper": "^3.0.0-alpha.2",
         "next-routes": "^1.4.2",
         "node-sass": "^4.12.0",
