--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@zeit/next-sass": "^1.0.1",
         "babel-plugin-styled-components": "^1.10.0",
         "dotenv": "^8.0.0",
+        "express": "^4.17.1",
         "firebase": "^6.2.0",
         "firebase-admin": "^8.2.0",
         "firebase-functions": "^3.0.1",
