--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Minimalistic serverless boilerplate based on NextJS and Firebase",
     "main": "index.js",
     "scripts": {
-        "dev": "next \"src/app/\"",
+        "dev": "node \"./src/functions/devServer.js\"",
         "preserve": "npm run build-all && npm run copy-deps && npm run install-deps",
         "serve": "cross-env NODE_ENV=production firebase serve",
         "predeploy": "npm run build-all && npm run copy-deps",
