--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "normalize.css": "^8.0.1",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
+        "react-beautiful-dnd": "^11.0.4",
         "react-dom": "^16.8.6",
         "react-flip-move": "^3.0.3",
         "react-ga": "^2.5.7",
