--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react": "^16.8.6",
         "react-beautiful-dnd": "^11.0.4",
         "react-dom": "^16.8.6",
+        "react-dropzone": "^10.1.5",
         "react-flip-move": "^3.0.3",
         "react-ga": "^2.5.7",
         "react-image-gallery": "^0.8.17",
@@ -50,6 +51,7 @@
         "react-responsive-modal": "^4.0.1",
         "react-select": "^3.0.4",
         "react-slick": "^0.24.0",
+        "react-sortable-hoc": "^1.9.1",
         "recompose": "^0.30.0",
         "redux": "^4.0.1",
         "redux-devtools-extension": "^2.13.8",
