--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "license": "ISC",
     "dependencies": {
         "@zeit/next-sass": "^1.0.1",
+        "array-move": "^2.1.0",
         "babel-plugin-styled-components": "^1.10.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
