--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@zeit/next-sass": "^1.0.1",
         "array-move": "^2.1.0",
+        "axios": "^0.18.0",
         "babel-plugin-styled-components": "^1.10.0",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
@@ -37,7 +38,6 @@
         "next-redux-wrapper": "^3.0.0-alpha.2",
         "next-routes": "^1.4.2",
         "node-sass": "^4.12.0",
-        "nodemailer": "^6.2.1",
         "normalize.css": "^8.0.1",
         "prop-types": "^15.7.2",
         "react": "^16.8.6",
@@ -52,10 +52,12 @@
         "react-select": "^3.0.4",
         "react-slick": "^0.24.0",
         "react-sortable-hoc": "^1.9.1",
+        "react-stripe-elements": "^3.0.0",
         "recompose": "^0.30.0",
         "redux": "^4.0.1",
         "redux-devtools-extension": "^2.13.8",
         "redux-thunk": "^2.3.0",
+        "stripe": "^7.4.0",
         "styled-components": "^4.3.1"
     },
     "devDependencies": {
