--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "array-move": "^2.1.0",
         "axios": "^0.18.0",
         "babel-plugin-styled-components": "^1.10.0",
+        "cors": "^2.8.5",
         "dotenv": "^8.0.0",
         "express": "^4.17.1",
         "firebase": "^6.2.0",
