--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-slick": "^0.24.0",
         "react-sortable-hoc": "^1.9.1",
         "react-stripe-elements": "^3.0.0",
+        "react-toastify": "^5.3.1",
         "recompose": "^0.30.0",
         "redux": "^4.0.1",
         "redux-devtools-extension": "^2.13.8",
