--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "firebase": "^6.2.0",
         "firebase-admin": "^8.2.0",
         "firebase-functions": "^3.0.1",
+        "moment": "^2.24.0",
         "next": "^8.1.0",
         "next-images": "^1.1.1",
         "next-page-transitions": "^1.0.0-canary.1",
